# scratch-vm

./: Cargo.toml
lang/: README.md  ast.txt  bytecode.txt  equiv.js  project.json  trace.txt  trace2.txt
src/: ast.rs  blocks.rs  bytecode.rs  codegen.rs  interpreter.rs  lib.rs  main.rs  sb3.rs
src/ast/: primitives.rs  project.rs
src/bytecode/: id.rs  opcode.rs  value.rs
src/interpreter/: id.rs  opcode.rs  value.rs
test/: counter.json  counter.min.json
